correct align-items-center width

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -79,12 +79,6 @@ body, html {
   width: 600px;
 }
 
-
-
-.align-items-center{
-  width: 160%;
-}
-
 .adress-link{
   color: black;
 }
